--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -19814,5 +19814,32 @@
         <target>Chaque citoyen qui viendra scruter l'horizon ici pourra améliorer la qualité de l'estimation.</target>
       </segment>
     </unit>
+    <unit id="Fu0IcEb">
+      <notes>
+        <note category="german">WARNUNG: Es besteht eine große Chance, dass du von anderen Bürgern entdeckt wirst, wenn du jemanden in der Stadt verschlingst! Mach das besser in der Aussenwelt...</note>
+      </notes>
+      <segment>
+        <source>WARNUNG: Es besteht eine große Chance, dass du von anderen Bürgern entdeckt wirst, wenn du jemanden in der Stadt verschlingst! Mach das besser in der Aussenwelt...</source>
+        <target>ATTENTION: vous avez une chance importante d'être repéré(e) par les autres citoyens si vous dévorez quelqu'un en ville ! Préférez un meurtre dans l'outre-monde...</target>
+      </segment>
+    </unit>
+    <unit id="4sVRjER">
+      <notes>
+        <note category="german">Die offensichtlichen Spuren zeigen, dass %user% die Grenzen zum Wahnsinn überschritten haben muss: abgenagte Knochen, zerfetzte menschliche Gliedmaßen, halb aufgegessene Tierreste... Sein ehemaliges Zuhause ist ein veritables stinkendes Massengrab, das keinen Zweifel zulässt: &lt;strong&gt;%user% war ein Ghoul&lt;/strong&gt;!</note>
+      </notes>
+      <segment>
+        <source>Die offensichtlichen Spuren zeigen, dass %user% die Grenzen zum Wahnsinn überschritten haben muss: abgenagte Knochen, zerfetzte menschliche Gliedmaßen, halb aufgegessene Tierreste... Sein ehemaliges Zuhause ist ein veritables stinkendes Massengrab, das keinen Zweifel zulässt: &lt;strong&gt;%user% war ein Ghoul&lt;/strong&gt;!</source>
+        <target><![CDATA[Des traces on ne peut plus évidentes portent à croire que %user% aurait franchi les limites de la démence : des os rongés, des membres humains déchiquetés, des restes d'animaux à moitié dévorés... Son ancienne habitation est un véritable charnier puant qui ne laisse planer aucun doute : <strong>%user% était une goule</strong> !]]></target>
+      </segment>
+    </unit>
+    <unit id="rUnZoOv">
+      <notes>
+        <note category="german">Diese Aktion ermöglicht es dir, diesen Bürger zu verschlingen, um deinen unersättlichen Heißhunger zu stillen!</note>
+      </notes>
+      <segment>
+        <source>Diese Aktion ermöglicht es dir, diesen Bürger zu verschlingen, um deinen unersättlichen Heißhunger zu stillen!</source>
+        <target>Cette action vous permettra de dévorer ce citoyen pour calmer votre appétit... vorace !</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
