--- a/translations/items.en.xlf
+++ b/translations/items.en.xlf
@@ -8408,5 +8408,14 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
         <target>Screaming Alarm Clock</target>
       </segment>
     </unit>
+    <unit id="1sicavE">
+      <notes>
+        <note category="german">Unglaublich! Die ganze Gier, die dich innerlich aufgefressen hat, verschwindet langsam. Ist es wirklich möglich, dass du wieder ein Mensch geworden bist?</note>
+      </notes>
+      <segment>
+        <source>Unglaublich! Die ganze Gier, die dich innerlich aufgefressen hat, verschwindet langsam. Ist es wirklich möglich, dass du wieder ein Mensch geworden bist?</source>
+        <target>Unglaublich! Die ganze Gier, die dich innerlich aufgefressen hat, verschwindet langsam. Ist es wirklich möglich, dass du wieder ein Mensch geworden bist?</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
