--- a/translations/items.fr.xlf
+++ b/translations/items.fr.xlf
@@ -8327,5 +8327,14 @@
         <target>Réveil-Hurleur</target>
       </segment>
     </unit>
+    <unit id="1sicavE">
+      <notes>
+        <note category="german">Unglaublich! Die ganze Gier, die dich innerlich aufgefressen hat, verschwindet langsam. Ist es wirklich möglich, dass du wieder ein Mensch geworden bist?</note>
+      </notes>
+      <segment>
+        <source>Unglaublich! Die ganze Gier, die dich innerlich aufgefressen hat, verschwindet langsam. Ist es wirklich möglich, dass du wieder ein Mensch geworden bist?</source>
+        <target>Vous n'en revenez pas ! Toute la voracité qui vous rongeait de l'intérieur disparaît petit à petit. Est-ce vraiment possible que vous soyez redevenu humain ?</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
