--- a/translations/admin.es.xlf
+++ b/translations/admin.es.xlf
@@ -3412,5 +3412,41 @@
         <target>Editar</target>
       </segment>
     </unit>
+    <unit id="b6xEh89" name="Werte">
+      <notes>
+        <note category="german">Werte</note>
+      </notes>
+      <segment>
+        <source>Werte</source>
+        <target>Werte</target>
+      </segment>
+    </unit>
+    <unit id="N89SWeP" name="Hunger">
+      <notes>
+        <note category="german">Hunger</note>
+      </notes>
+      <segment>
+        <source>Hunger</source>
+        <target>Hunger</target>
+      </segment>
+    </unit>
+    <unit id="7JnkyKJ" name="Camp Chance">
+      <notes>
+        <note category="german">Camp Chance</note>
+      </notes>
+      <segment>
+        <source>Camp Chance</source>
+        <target>Camp Chance</target>
+      </segment>
+    </unit>
+    <unit id="b5V7Hy2" name="Camp Zähler">
+      <notes>
+        <note category="german">Camp Zähler</note>
+      </notes>
+      <segment>
+        <source>Camp Zähler</source>
+        <target>Camp Zähler</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
