--- a/translations/game.de.xlf
+++ b/translations/game.de.xlf
@@ -2992,7 +2992,7 @@
       </notes>
       <segment>
         <source>Leiche aus der Stadt ziehen</source>
-        <target>Leiche aus der Stadt ziehen</target>
+        <target>Aus der Stadt ziehen</target>
       </segment>
     </unit>
     <unit id="hXIZAOO" name="Leiche mit Wasser übergießen">
