--- a/translations/items.fr.xlf
+++ b/translations/items.fr.xlf
@@ -8126,7 +8126,7 @@
       </notes>
       <segment>
         <source>Kaum hast du deine Pille geschluckt, da verschwindet auch schon dein Durst. Hoffen wir mal, das alles gut geht...</source>
-        <target>Vous avalez votre pillule... Quelques instants plus tard, la sensation de soif finit par s'estomper. Mais à quel prix...</target>
+        <target>Vous avalez votre pilule... Quelques instants plus tard, la sensation de soif finit par s'estomper. Mais à quel prix...</target>
       </segment>
     </unit>
     <unit id="izlHb1B">
