--- a/translations/welcome.en.xlf
+++ b/translations/welcome.en.xlf
@@ -19,33 +19,6 @@
         <target>Welcome to MyHordes</target>
       </segment>
     </unit>
-    <unit id="Cny3Jgk">
-      <notes>
-        <note category="german">MyHordes ist eine von der Community entwickelte offene Implementierung des Browser-Spiels
-                    "Die Verdammten" und seine anderen Versionen von %motiontwin%.</note>
-      </notes>
-      <segment>
-        <source>MyHordes ist eine von der Community entwickelte offene Implementierung des Browser-Spiels
-                    "Die Verdammten" und seine anderen Versionen von %motiontwin%.</source>
-        <target>MyHordes is an open implementation of the browser game "Die2Nite" and its other versions
-          by %motiontwin% and developed by the community.</target>
-      </segment>
-    </unit>
-    <unit id="wuuGs9i">
-      <notes>
-        <note category="german">Ziel des Projektes ist es, eine Version von "Die Verdammten" und seinen anderen Versionen zu erschaffen, die nicht nur nach der
-                    Flash-Abschaltung im Jahr 2020 funktionsfähig ist, sondern auch weiterentwickelt und mit neuen
-                    Inhalten versorgt werden kann.</note>
-      </notes>
-      <segment>
-        <source>Ziel des Projektes ist es, eine Version von "Die Verdammten" und seinen anderen Versionen zu erschaffen, die nicht nur nach der
-                    Flash-Abschaltung im Jahr 2020 funktionsfähig ist, sondern auch weiterentwickelt und mit neuen
-                    Inhalten versorgt werden kann.</source>
-        <target>The aim of this project is to create a version of "Die2Nite" and its other versions, that will
-          not only work after the removal of Flash support in common browsers,
-          but will also be developed beyond the original and receive new content.</target>
-      </segment>
-    </unit>
     <unit id="mbIzlHW" name="Zum Spiel">
       <notes>
         <note category="german">Zum Spiel</note>
@@ -71,17 +44,6 @@
       <segment>
         <source>Zum Login</source>
         <target>Login</target>
-      </segment>
-    </unit>
-    <unit id="RaJYSbq">
-      <notes>
-        <note category="german">Alle Grafiken stammen, wenn nicht ausdrücklich anders angegeben, ebenfalls aus "Die Verdammten" und seine anderen Versionen und sind
-                    damit Eigentum von %motiontwin%.</note>
-      </notes>
-      <segment>
-        <source>Alle Grafiken stammen, wenn nicht ausdrücklich anders angegeben, ebenfalls aus "Die Verdammten" und seine anderen Versionen und sind
-                    damit Eigentum von %motiontwin%.</source>
-        <target>All graphical assets are taken from Die2Nite and its other versions if not stated otherwise and therefore are property of %motiontwin%.</target>
       </segment>
     </unit>
     <unit id="lHIUXzm" name="Bürger gestorben">
@@ -136,6 +98,33 @@
       <segment>
         <source>Abonnierte Themen</source>
         <target>Threads I'm following</target>
+      </segment>
+    </unit>
+    <unit id="f63iKfV">
+      <notes>
+        <note category="german">MyHordes ist eine von der Community entwickelte offene Implementierung des Browser-Spiels "Die Verdammten" und seine anderen Versionen von %motiontwin%.</note>
+      </notes>
+      <segment>
+        <source>MyHordes ist eine von der Community entwickelte offene Implementierung des Browser-Spiels "Die Verdammten" und seine anderen Versionen von %motiontwin%.</source>
+        <target>MyHordes is an open implementation of the browser game "Die2Nite" by %motiontwin% and its other versions, and is actively developed by the community.</target>
+      </segment>
+    </unit>
+    <unit id="JyLklnq">
+      <notes>
+        <note category="german">Ziel des Projektes ist es, eine Version von "Die Verdammten" und seinen anderen Versionen zu erschaffen, die nicht nur nach der Flash-Abschaltung im Jahr 2020 funktionsfähig ist, sondern auch weiterentwickelt und mit neuen Inhalten versorgt werden kann.</note>
+      </notes>
+      <segment>
+        <source>Ziel des Projektes ist es, eine Version von "Die Verdammten" und seinen anderen Versionen zu erschaffen, die nicht nur nach der Flash-Abschaltung im Jahr 2020 funktionsfähig ist, sondern auch weiterentwickelt und mit neuen Inhalten versorgt werden kann.</source>
+        <target>The aim of this project is to create a version of "Die2Nite" and its other versions, that will not only work after the removal of Flash support in common browsers, but will also be developed beyond the original and receive new content.</target>
+      </segment>
+    </unit>
+    <unit id="GEQa89m">
+      <notes>
+        <note category="german">Alle Grafiken stammen, wenn nicht ausdrücklich anders angegeben, ebenfalls aus "Die Verdammten" und seine anderen Versionen und sind damit Eigentum von %motiontwin%.</note>
+      </notes>
+      <segment>
+        <source>Alle Grafiken stammen, wenn nicht ausdrücklich anders angegeben, ebenfalls aus "Die Verdammten" und seine anderen Versionen und sind damit Eigentum von %motiontwin%.</source>
+        <target>All graphical assets are taken from Die2Nite and its other versions if not stated otherwise and therefore are property of %motiontwin%.</target>
       </segment>
     </unit>
   </file>
