--- a/translations/welcome.fr.xlf
+++ b/translations/welcome.fr.xlf
@@ -19,33 +19,6 @@
         <target>Bienvenue sur MyHordes</target>
       </segment>
     </unit>
-    <unit id="Cny3Jgk">
-      <notes>
-        <note category="german">MyHordes ist eine von der Community entwickelte offene Implementierung des Browser-Spiels
-                    "Die Verdammten" und seine anderen Versionen von %motiontwin%.</note>
-      </notes>
-      <segment>
-        <source>MyHordes ist eine von der Community entwickelte offene Implementierung des Browser-Spiels
-                    "Die Verdammten" und seine anderen Versionen von %motiontwin%.</source>
-        <target>MyHordes est une implémentation libre développée par la communauté du jeu
-                    "Hordes.fr" et de ses autres versions de %motiontwin%.</target>
-      </segment>
-    </unit>
-    <unit id="wuuGs9i">
-      <notes>
-        <note category="german">Ziel des Projektes ist es, eine Version von "Die Verdammten" und seinen anderen Versionen zu erschaffen, die nicht nur nach der
-                    Flash-Abschaltung im Jahr 2020 funktionsfähig ist, sondern auch weiterentwickelt und mit neuen
-                    Inhalten versorgt werden kann.</note>
-      </notes>
-      <segment>
-        <source>Ziel des Projektes ist es, eine Version von "Die Verdammten" und seinen anderen Versionen zu erschaffen, die nicht nur nach der
-                    Flash-Abschaltung im Jahr 2020 funktionsfähig ist, sondern auch weiterentwickelt und mit neuen
-                    Inhalten versorgt werden kann.</source>
-        <target>Le but de ce projet est de créer une version de "Hordes.fr" et de ses autres versions qui soit fonctionnelle
-                    malgré l'arrêt de Flash en 2020, mais aussi de la faire évoluer avec
-                    du nouveau contenu.</target>
-      </segment>
-    </unit>
     <unit id="mbIzlHW" name="Zum Spiel">
       <notes>
         <note category="german">Zum Spiel</note>
@@ -71,18 +44,6 @@
       <segment>
         <source>Zum Login</source>
         <target>Se connecter</target>
-      </segment>
-    </unit>
-    <unit id="RaJYSbq">
-      <notes>
-        <note category="german">Alle Grafiken stammen, wenn nicht ausdrücklich anders angegeben, ebenfalls aus "Die Verdammten" und seine anderen Versionen und sind
-                    damit Eigentum von %motiontwin%.</note>
-      </notes>
-      <segment>
-        <source>Alle Grafiken stammen, wenn nicht ausdrücklich anders angegeben, ebenfalls aus "Die Verdammten" und seine anderen Versionen und sind
-                    damit Eigentum von %motiontwin%.</source>
-        <target>Sauf indication contraire, tous les éléments graphiques proviennent de "Hordes.fr" et de ses autres versions et
-                    sont la propriété de %motiontwin%.</target>
       </segment>
     </unit>
     <unit id="lHIUXzm" name="Bürger gestorben">
@@ -137,6 +98,33 @@
       <segment>
         <source>Abonnierte Themen</source>
         <target>Les sujets que je suis</target>
+      </segment>
+    </unit>
+    <unit id="f63iKfV">
+      <notes>
+        <note category="german">MyHordes ist eine von der Community entwickelte offene Implementierung des Browser-Spiels "Die Verdammten" und seine anderen Versionen von %motiontwin%.</note>
+      </notes>
+      <segment>
+        <source>MyHordes ist eine von der Community entwickelte offene Implementierung des Browser-Spiels "Die Verdammten" und seine anderen Versionen von %motiontwin%.</source>
+        <target>MyHordes est une implémentation libre développée par la communauté du jeu "Hordes.fr" et de ses autres versions de %motiontwin%.</target>
+      </segment>
+    </unit>
+    <unit id="JyLklnq">
+      <notes>
+        <note category="german">Ziel des Projektes ist es, eine Version von "Die Verdammten" und seinen anderen Versionen zu erschaffen, die nicht nur nach der Flash-Abschaltung im Jahr 2020 funktionsfähig ist, sondern auch weiterentwickelt und mit neuen Inhalten versorgt werden kann.</note>
+      </notes>
+      <segment>
+        <source>Ziel des Projektes ist es, eine Version von "Die Verdammten" und seinen anderen Versionen zu erschaffen, die nicht nur nach der Flash-Abschaltung im Jahr 2020 funktionsfähig ist, sondern auch weiterentwickelt und mit neuen Inhalten versorgt werden kann.</source>
+        <target>Le but de ce projet est de créer une version de "Hordes.fr" et de ses autres versions qui soit fonctionnelle malgré l'arrêt de Flash en 2020, mais aussi de la faire évoluer avec du nouveau contenu.</target>
+      </segment>
+    </unit>
+    <unit id="GEQa89m">
+      <notes>
+        <note category="german">Alle Grafiken stammen, wenn nicht ausdrücklich anders angegeben, ebenfalls aus "Die Verdammten" und seine anderen Versionen und sind damit Eigentum von %motiontwin%.</note>
+      </notes>
+      <segment>
+        <source>Alle Grafiken stammen, wenn nicht ausdrücklich anders angegeben, ebenfalls aus "Die Verdammten" und seine anderen Versionen und sind damit Eigentum von %motiontwin%.</source>
+        <target>Sauf indication contraire, tous les éléments graphiques proviennent de "Hordes.fr" et de ses autres versions et sont la propriété de %motiontwin%.</target>
       </segment>
     </unit>
   </file>
