Typo for camera

--- a/translations/items.fr.xlf
+++ b/translations/items.fr.xlf
@@ -7063,7 +7063,7 @@
       </notes>
       <segment>
         <source>Diese nostalgische Knipse aus dem letzten Jahrhundert wirkt, als hätte sie schon Aberhunderten Leuten die Netzhaut verbrannt. Ihr schwacher Blitz könnte dich aus brenzligen Situationen retten, wenn du Zombies damit blendest!</source>
-        <target>Cette authentique breloque du siècle dernier aurait, parait-il, à son actif des centaines de rétines brûlées. Son flash mal réglé vous permettra de vous sortir de toutes les situations désespérées en aveuglant les zombies !</target>
+        <target>Cette authentique breloque du siècle dernier aurait, paraît-il, à son actif des centaines de rétines brûlées. Son flash mal réglé vous permettra de vous sortir de toutes les situations désespérées en aveuglant les zombies !</target>
       </segment>
     </unit>
     <unit id="q1MWl8S" name="Benutzen">
